# welearn-database

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
populate/: document_related.welearn_document.doi.sql
populate/document_related.welearn_document.doi/: batching_colum_filling.py  document_related.welearn_document.doi.sql  update_doi.sql
tests/: helpers.py  test_corpus_related.py  test_create_database.py  test_document_related.py  test_user_related.py
welearn_database/: database_utils.py  exceptions.py  regular_expression.py
welearn_database/alembic/: env.py
welearn_database/alembic/versions/: 0e0bc0fca384_doc_qty_per_source.py  16ff997426d3_remove_error_retrieval_unique_constraint.py  4c7161819e5a_grafana_views.py  5aad97149044_add_histo_table_for_materialized_views.py  6d4346fad6f4_view_used_feature_per_session.py  821173cf9c5d_initial_migration.py  8b780aea403a_add_university_data.py  9b4f1da0c1f2_data_collection_for_focus_group.py  b049924f7067_modify_corpus_name_embedding_model_lang_.py  b84462ca3800_update_grafana_process_state_view.py  ccdbd708c997_create_column_external_id.py  f1ce0ad2845b_add_doi_column_to_document.py  f8602200fa99_update_session_view.py
welearn_database/data/: details_dict.py  enumeration.py  views.py
welearn_database/data/models/: __init__.py  corpus_related.py  document_related.py  grafana.py  user_related.py
welearn_database/modules/: views_helper.py
