[project]
name = "welearn-database"
version = "1.4.5.dev0"
description = "All stuff related to relationnal database from the WeLearn project"
authors = [
    {name = "Théo",email = "theo.nardin@cri-paris.org"}
]
license = {text = "cc-by-sa-nc"}
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
bandit = "^1.9.4"
isort = "^8.0.1"
black = "26.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
